--- a/ca2/web/Register.xhtml
+++ b/ca2/web/Register.xhtml
@@ -3,21 +3,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>User Login</title>
+        <title>User Registration</title>
     </h:head>
     <h:body>
+
         <h1>Login</h1>
         <h:form>
 
             <h:panelGrid columns="2">
                 Username:
-                <h:inputText value="#{loginView.username}"/>
+                <h:inputText value="#{registerView.username}"/>
 
                 Password:
-                <h:inputSecret value="#{loginView.password}"/>
+                <h:inputSecret value="#{registerView.password}"/>
 
                 <h:panelGroup/>
-                <h:commandButton value="Login" action="#{loginView.login()}"/>
+                <h:commandButton value="Register" action="#{registerView.registerUser()}"/>
 
             </h:panelGrid>
 
