fix for user login/register

--- a/ca2/web/Register.xhtml
+++ b/ca2/web/Register.xhtml
@@ -7,7 +7,7 @@
     </h:head>
     <h:body>
 
-        <h1>Login</h1>
+        <h1>User Registration</h1>
         <h:form>
 
             <h:panelGrid columns="2">
