add groups and groupBean

--- a/ca2/web/Register.xhtml
+++ b/ca2/web/Register.xhtml
@@ -16,6 +16,10 @@
 
                 Password:
                 <h:inputSecret value="#{registerView.password}"/>
+                
+                Retype-Password:
+                <h:inputSecret value="#{registerView.rePassword}"/>
+                                
 
                 <h:panelGroup/>
                 <h:commandButton value="Register" action="#{registerView.registerUser()}"/>
