updated note display functions

--- a/ca2/web/displaynote.html
+++ b/ca2/web/displaynote.html
@@ -34,7 +34,7 @@ and open the template in the editor.
               });
               
               function onOpen(evt){
-                  doSend("hello");
+                  //doSend("hello");
               }
               function onMessage(evt){
                   console.log(evt.data);
