--- a/ca2/web/displaynote.html
+++ b/ca2/web/displaynote.html
@@ -50,29 +50,31 @@ and open the template in the editor.
               });
               
               function onOpen(evt,category){
-                 $.ajax({
-                     url:'http://localhost:8080/ca2/api/note/'+category,
-                     data:{
-                         format:'json'
-                     },
-                     error:function(){
-                         console.log("error");
-                     },
-                     success:function(data){
-                         if(data){
-                            for(var i=0;i<data.length;i++){
-                                var note=data[i];
-                                if($($("table[data-category='"+category+"'] tbody tr")[0]).length){
-                                    $($("table[data-category='"+category+"'] tbody")[0])
-                                        .prepend("<tr><td>"+note.title+"</td>"+"<td>"+timeConverter(note.dateTime)+"</td>"+"<td>"+note.user+"</td>"+"<td>"+note.category+"</td>"+"<td>"+note.content+"</td>"+"</td>");
-                                }else{
-                                    $($("table[data-category='"+category+"'] tbody")[0])
-                                        .append("<tr><td>"+note.title+"</td>"+"<td>"+timeConverter(note.dateTime)+"</td>"+"<td>"+note.user+"</td>"+"<td>"+note.category+"</td>"+"<td>"+note.content+"</td>"+"</td>");
-                                }
-                            } 
-                         }
-                     }
-                 });
+                    $("table[data-category='"+category+"'] tbody").empty();
+                    $.ajax({
+                        url:'http://localhost:8080/ca2/api/note/'+category,
+                        data:{
+                            format:'json'
+                        },
+                        error:function(){
+                            console.log("error");
+                        },
+                        success:function(data){
+                            if(data){
+                               for(var i=0;i<data.length;i++){
+                                   var note=data[i];
+                                   if($($("table[data-category='"+category+"'] tbody tr")[0]).length){
+                                       $($("table[data-category='"+category+"'] tbody")[0])
+                                           .prepend("<tr><td>"+note.title+"</td>"+"<td>"+timeConverter(note.dateTime)+"</td>"+"<td>"+note.user+"</td>"+"<td>"+note.category+"</td>"+"<td>"+note.content+"</td>"+"</td>");
+                                   }else{
+                                       $($("table[data-category='"+category+"'] tbody")[0])
+                                           .append("<tr><td>"+note.title+"</td>"+"<td>"+timeConverter(note.dateTime)+"</td>"+"<td>"+note.user+"</td>"+"<td>"+note.category+"</td>"+"<td>"+note.content+"</td>"+"</td>");
+                                   }
+                               } 
+                            }
+                        }
+                    });  
+                
               }
               function onMessage(evt,category){
                 console.log($("table[data-category='"+category+"']")[0]);
@@ -118,7 +120,7 @@ and open the template in the editor.
               <li><a data-toggle="tab" href="#social" data-category="SOCIAL">Social</a></li>
               <li><a data-toggle="tab" href="#for-sale" data-category="FORSALE">For Sale</a></li>
               <li><a data-toggle="tab" href="#jobs" data-category="JOBS">Jobs</a></li>
-              <li><a data-toggle="tab" href="#tuition" data-category="TUITION">Tuition</a></li>
+              <li><a data-toggle="tab" href="#tuition" data-category="TUITUION">Tuition</a></li>
             </ul>
             <div class="tab-content">
                 <div id="all" class="tab-pane fade in active">
@@ -191,7 +193,7 @@ and open the template in the editor.
                 </div>
                 <div id="tuition" class="tab-pane fade">
                     <h3>Tuition</h3>
-                         <table class="table" data-category="TUITION">
+                         <table class="table" data-category="TUITUION">
                         <thead>
                             <tr>
                                 <th>Title</th>
